--- a/app/src/main/res/layout/fragment_seconde.xml
+++ b/app/src/main/res/layout/fragment_seconde.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".Seconde">
+    tools:context=".Seconde"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <EditText
+        android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
         android:textColor="@color/white"
-        android:textSize="40sp"
-        android:gravity="center"
-        android:text="Hello Second Fragment" />
+        android:textSize="20sp"
+        android:background="@color/white_low"
+        android:autofillHints="Text Field"
+        android:inputType="text"
+        android:layout_margin="10dp"
+        tools:ignore="LabelFor" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:text="@string/submit"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
